--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-runtime": "^5.8.38",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
     "gulp-beautify": "^2.0.0",
@@ -26,8 +27,10 @@
     "gulp-watch": "^4.3.5",
     "gulp-webpack": "^1.5.0",
     "gulp.spritesmith": "^6.2.1",
+    "jquery": "^2.2.3",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
+    "magnific-popup": "^1.1.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue": "^1.0.21",
