--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^5.8.38",
+    "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -21,6 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-beautify": "^2.0.0",
     "gulp-cached": "^1.1.0",
+    "gulp-jshint": "^2.0.0",
     "gulp-rev": "^7.0.0",
     "gulp-rev-replace": "^0.4.3",
     "gulp-util": "^3.0.7",
@@ -28,6 +30,7 @@
     "gulp-webpack": "^1.5.0",
     "gulp.spritesmith": "^6.2.1",
     "jquery": "^2.2.3",
+    "jshint": "^2.9.2",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "magnific-popup": "^1.1.0",
