--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-beautify": "^2.0.0",
     "gulp-cached": "^1.1.0",
+    "gulp-connect": "^4.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-rev": "^7.0.0",
     "gulp-rev-replace": "^0.4.3",
@@ -43,6 +44,7 @@
     "vue-resource": "^0.7.0",
     "vue-router": "^0.7.13",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
