--- a/package.json
+++ b/package.json
@@ -45,8 +45,5 @@
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   },
-  "dependencies": {
-    "bootstrap": "^3.3.6",
-    "jquery": "^3.1.0"
-  }
+  "dependencies": {}
 }
